--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -9,7 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
+    "axios": "^1.4.0",
     "expo": "~48.0.15",
+    "expo-linear-gradient": "^12.1.2",
+    "expo-splash-screen": "^0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.7"
@@ -17,6 +21,8 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "@types/react-native-dotenv": "^0.2.0",
+    "react-native-dotenv": "^3.4.8",
     "typescript": "^4.9.4"
   },
   "private": true
